@@ -25,48 +25,53 @@ import com.echothree.model.data.core.server.entity.ComponentVendor;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetComponentVendorsCommand
-        extends BaseMultipleEntitiesCommand<ComponentVendor, GetComponentVendorsForm>
+        extends BasePaginatedMultipleEntitiesCommand<ComponentVendor, GetComponentVendorsForm>
     {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.ComponentVendor.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetComponentVendorsCommand */
     public GetComponentVendorsCommand(UserVisitPK userVisitPK, GetComponentVendorsForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
-    @Override
-    protected Collection<ComponentVendor> getEntities() {
-        var coreControl = getCoreControl();
 
-        return coreControl.getComponentVendors();
+    @Override
+    protected void handleForm() {
+        // No form fields.
     }
 
     @Override
-    protected BaseResult getTransfers(Collection<ComponentVendor> entities) {
+    protected Long getTotalEntities() {
+        return getCoreControl().countComponentVendors();
+    }
+
+    @Override
+    protected Collection<ComponentVendor> getEntities() {
+        return getCoreControl().getComponentVendors();
+    }
+
+    @Override
+    protected BaseResult getResult(Collection<ComponentVendor> entities) {
         var result = CoreResultFactory.getGetComponentVendorsResult();
 
         if(entities != null) {
